[gd_scene load_steps=28 format=3 uid="uid://myiyk7kteiqb"]

[ext_resource type="Script" path="res://scene/editor/event/EventFlowApp.cs" id="1_rd7f7"]
[ext_resource type="PackedScene" uid="uid://b4j4g3xghg0a5" path="res://scene/app/components/dialog_unsaved_changes.tscn" id="2_7ecjt"]
[ext_resource type="Texture2D" uid="uid://b7wobkf5wytp3" path="res://asset/app/icon/eventflow.png" id="2_7jypk"]
[ext_resource type="Shader" path="res://asset/shader/graph/graph_background.gdshader" id="3_budwu"]
[ext_resource type="Script" path="res://scene/editor/event/graph/component/graph_background_rect.gd" id="4_e62qm"]
[ext_resource type="Script" path="res://scene/editor/event/graph/GraphCanvas.cs" id="5_5dp1p"]
[ext_resource type="Script" path="res://scene/editor/event/graph/component/scroll_navigation.gd" id="6_va4yh"]
[ext_resource type="Script" path="res://scene/editor/event/graph/component/mouse_selection.gd" id="7_mr57c"]
[ext_resource type="Script" path="res://scene/editor/event/graph/component/axis_line_renderer.gd" id="8_4n4mt"]
[ext_resource type="Texture2D" uid="uid://bbxsfrv8y7m5y" path="res://asset/material/graph/move.svg" id="8_70kp1"]
[ext_resource type="Script" path="res://scene/editor/event/graph/NodeHolder.cs" id="8_je2jj"]
[ext_resource type="Theme" uid="uid://bajosqw3blmjp" path="res://asset/theme/event/graph/event_graph_ui_header.tres" id="9_1hwnx"]
[ext_resource type="Texture2D" uid="uid://cy0acrnosdjdw" path="res://asset/material/graph/zoom_out.svg" id="10_k8svk"]
[ext_resource type="Texture2D" uid="uid://w3rxhvslqs13" path="res://asset/material/graph/zoom_reset.svg" id="11_uvpj5"]
[ext_resource type="Texture2D" uid="uid://kgy23al2n62k" path="res://asset/material/graph/zoom_in.svg" id="12_570rd"]
[ext_resource type="Script" path="res://scene/editor/event/graph/component/scroll_bar_ui.gd" id="12_kgg6l"]
[ext_resource type="Texture2D" uid="uid://dti6ok2kka208" path="res://asset/material/debug/debug.svg" id="12_scho0"]
[ext_resource type="Texture2D" uid="uid://cpbi4wkt4nu1l" path="res://asset/material/file/add.svg" id="14_co2bl"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1sx65"]
shader = ExtResource("3_budwu")
shader_parameter/graph_position = Vector2(0, 0)
shader_parameter/dot_size = Vector2(45, 45)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v3jgl"]

[sub_resource type="InputEventAction" id="InputEventAction_mfvuv"]
action = &"ui_graph_reset_zoom"

[sub_resource type="Shortcut" id="Shortcut_e8ok1"]
events = [SubResource("InputEventAction_mfvuv")]

[sub_resource type="InputEventAction" id="InputEventAction_hoajv"]
action = &"ui_graph_inject"

[sub_resource type="Shortcut" id="Shortcut_8p0il"]
events = [SubResource("InputEventAction_hoajv")]

[sub_resource type="InputEventAction" id="InputEventAction_lu5vy"]
action = &"ui_toggle_debug"

[sub_resource type="Shortcut" id="Shortcut_bx36p"]
events = [SubResource("InputEventAction_lu5vy")]

[sub_resource type="GDScript" id="GDScript_mtjrf"]
script/source = "extends Button

func _ready():
	if !OS.is_debug_build():
		queue_free()
"

[node name="EventFlowApp" type="Control" node_paths=PackedStringArray("GraphCanvas", "BackgroundCanvas", "GraphNodeHolder")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_rd7f7")
GraphCanvas = NodePath("Graph")
BackgroundCanvas = NodePath("Background")
GraphNodeHolder = NodePath("Graph/NodeHolder")
AppName = "EventFlowGraphApp"
AppTaskbarTitle = "EventFlow"
AppIcon = ExtResource("2_7jypk")
AppFlags = 115
UnsavedChangesScene = ExtResource("2_7ecjt")

[node name="Background" type="CanvasLayer" parent="."]
layer = -2

[node name="Rect" type="ColorRect" parent="Background" node_paths=PackedStringArray("graph")]
material = SubResource("ShaderMaterial_1sx65")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.0941176, 0.0941176, 0.0941176, 1)
script = ExtResource("4_e62qm")
graph = NodePath("../../Graph")

[node name="Graph" type="CanvasLayer" parent="."]
layer = -2
script = ExtResource("5_5dp1p")

[node name="Graph_ScrollNavigation" type="Node" parent="Graph" node_paths=PackedStringArray("ui_bar_holder")]
script = ExtResource("6_va4yh")
ui_bar_holder = NodePath("../../ScollNavigationBars")
cursor_icon = ExtResource("8_70kp1")

[node name="OriginLines" type="Node2D" parent="Graph"]
self_modulate = Color(1, 1, 1, 0.184314)
z_index = -15
script = ExtResource("8_4n4mt")

[node name="Area_MouseSelection" type="Area2D" parent="Graph" node_paths=PackedStringArray("shape")]
z_index = 2
collision_mask = 2
monitoring = false
script = ExtResource("7_mr57c")
shape = NodePath("Area_Shape")

[node name="Area_Shape" type="CollisionShape2D" parent="Graph/Area_MouseSelection"]
shape = SubResource("RectangleShape2D_v3jgl")
debug_color = Color(0, 0.595, 0.7, 0.513726)

[node name="NodeHolder" type="Node2D" parent="Graph"]
script = ExtResource("8_je2jj")

[node name="ScollNavigationBars" type="Control" parent="." node_paths=PackedStringArray("graph", "node_holder")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("9_1hwnx")
script = ExtResource("12_kgg6l")
graph = NodePath("../Graph")
node_holder = NodePath("../Graph/NodeHolder")

[node name="HScroll" type="HScrollBar" parent="ScollNavigationBars"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -8.0
offset_right = -15.0
grow_horizontal = 2
grow_vertical = 0
max_value = 1152.0
page = 1152.0
custom_step = 120.0

[node name="VScroll" type="VScrollBar" parent="ScollNavigationBars"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.0
offset_right = -5.0
offset_bottom = -15.0
grow_horizontal = 0
grow_vertical = 2
max_value = 648.0
page = 648.0
custom_step = 120.0

[node name="Header" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 130.0
offset_bottom = 46.0
theme = ExtResource("9_1hwnx")

[node name="UI" type="VBoxContainer" parent="Header"]
layout_mode = 2
theme_override_constants/separation = 9

[node name="HBox_ZoomControl" type="HBoxContainer" parent="Header/UI"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Button_ZoomOut" type="Button" parent="Header/UI/HBox_ZoomControl"]
layout_mode = 2
tooltip_text = "EVENT_FLOW_APP_BUTTON_ZOOM_OUT"
icon = ExtResource("10_k8svk")

[node name="Button_ZoomReset" type="Button" parent="Header/UI/HBox_ZoomControl"]
layout_mode = 2
tooltip_text = "EVENT_FLOW_APP_BUTTON_ZOOM_RESET"
shortcut = SubResource("Shortcut_e8ok1")
icon = ExtResource("11_uvpj5")

[node name="Button_ZoomIn" type="Button" parent="Header/UI/HBox_ZoomControl"]
layout_mode = 2
tooltip_text = "EVENT_FLOW_APP_BUTTON_ZOOM_IN"
icon = ExtResource("12_570rd")

[node name="HBox_Tools" type="HBoxContainer" parent="Header/UI"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Button_InjectNode" type="Button" parent="Header/UI/HBox_Tools"]
layout_mode = 2
tooltip_text = "EVENT_FLOW_APP_BUTTON_INJECT_NODE"
shortcut = SubResource("Shortcut_8p0il")
icon = ExtResource("14_co2bl")

[node name="Button_DebugDataView" type="Button" parent="Header/UI/HBox_Tools"]
layout_mode = 2
tooltip_text = "EVENT_FLOW_APP_BUTTON_DEBUG_MODE"
toggle_mode = true
shortcut = SubResource("Shortcut_bx36p")
icon = ExtResource("12_scho0")
script = SubResource("GDScript_mtjrf")

[connection signal="FileOpenComplete" from="." to="ScollNavigationBars" method="_on_window_size_changed"]
[connection signal="ContentModified" from="Graph" to="." method="OnFileModified"]
[connection signal="graph_offset_changed" from="Graph/Graph_ScrollNavigation" to="ScollNavigationBars" method="_on_graph_offset_changed"]
[connection signal="selection_ended" from="Graph/Area_MouseSelection" to="Graph" method="SetMouseDragSelectionState" binds= [false]]
[connection signal="selection_started" from="Graph/Area_MouseSelection" to="Graph" method="DeselectAllNodes"]
[connection signal="selection_started" from="Graph/Area_MouseSelection" to="Graph" method="SetMouseDragSelectionState" binds= [true]]
[connection signal="selection_started_with_shift" from="Graph/Area_MouseSelection" to="Graph" method="SetMouseDragSelectionState" binds= [true]]
[connection signal="child_entered_tree" from="Graph/NodeHolder" to="ScollNavigationBars" method="_on_graph_node_added"]
[connection signal="pressed" from="Header/UI/HBox_ZoomControl/Button_ZoomOut" to="Graph/Graph_ScrollNavigation" method="_on_button_zoom_out_pressed"]
[connection signal="pressed" from="Header/UI/HBox_ZoomControl/Button_ZoomReset" to="Graph/Graph_ScrollNavigation" method="_on_button_zoom_reset_pressed"]
[connection signal="pressed" from="Header/UI/HBox_ZoomControl/Button_ZoomIn" to="Graph/Graph_ScrollNavigation" method="_on_button_zoom_in_pressed"]
[connection signal="pressed" from="Header/UI/HBox_Tools/Button_InjectNode" to="Graph" method="OpenInjectMenu"]
[connection signal="toggled" from="Header/UI/HBox_Tools/Button_DebugDataView" to="Graph" method="SetDebugDataViewState"]
